--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,10 +27,10 @@ html
 		header
 			div(class="navbar")
 				div(class="navbar-inner")
-					a(class="brand", href="#") Balance
+					a(class="brand", href="/") Balance
 					ul(class="nav")
 						li(class="")
-							a(href="#") Home
+							a(href="/") Home
 						li(class="dropdown")
 							a(id="dropConsole", href="#", role="button", class="dropdown-toggle", data-toggle="dropdown") Console
 							ul(class="dropdown-menu", role="menu", aria-labelledby="dropConsole")
