--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html
 			title Express Starter Template
 		- else 
 			title= title
+		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 
 		// include default stylesheets and any view stylesheets
 		// link(rel='stylesheet', href=base + '/stylesheets/style.css')
