--- a/views/account/login.jade
+++ b/views/account/login.jade
@@ -1,4 +1,5 @@
-section(class="main-content")
+
+section()
     hgroup(class="title")
       h1 Log in.
       h2 Enter your user name and password below.
@@ -8,24 +9,6 @@ section(class="main-content")
         - each error in errors
             li.error= error
 
-      section(id="loginForm")
-        form(method="post", action="/login")
-            fieldset
-                legend Log in to Your Account.
-                ol
-                    li(class="username")
-                        label(for=everyauth.password.loginFormFieldName) Email:
-                        input(type="text", name=everyauth.password.loginFormFieldName, value=email)
-                    li(class="password")
-                        label(for=everyauth.password.passwordFormFieldName) Password:
-                        input(type="password", name=everyauth.password.passwordFormFieldName)
-                    li(class="remember-me")
-                        input(type="checkbox", id="rememberMe", name="rememberMe", value="true")
-                        label(class="checkbox", for="rememberMe") Remember me?
-                input(type="submit", value="Login")
-
-        a(href="/register") Don't have an Account?        
-  
     section(class="social", id="socialLoginForm")    
         form(method="post")
             h2 Use another service to log in
@@ -41,14 +24,8 @@ section(class="main-content")
             // - create an API key for each service, and put those keys in settings.json (see settings.example.json)
                         
             
-            //fieldset
+            fieldset
                 legend Log in using another service
-                a.fb_button_medium(href='/auth/facebook', class="button")
+                a.fb_button_medium(href='/auth/google', class="button")
                     img(src=base + '/images/facebookLogin.png')
-                
-                br
-                br
-
-                a(href='/auth/twitter', style='border: 0px')
-                    img(style='border: 0px', src='https://si0.twimg.com/images/dev/buttons/sign-in-with-twitter-l.png')
 
