--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,9 +11,13 @@ html
 		// link(rel='stylesheet', href=base + '/stylesheets/style.css')
 		link(rel='stylesheet', href=base + '/stylesheets/bootstrap.min.css')
 		link(rel='stylesheet', href=base + '/stylesheets/bootstrap-responsive.min.css')
+		link(rel='stylesheet', href=base + '/stylesheets/jquery-ui-1.10.2.custom.css')
+		link(rel='stylesheet', href=base + '/stylesheets/jquery.multiselect.css')
 
 		// include default scripts and any view scripts
 		script(src=base + '/javascripts/jquery-1.7.min.js')
+		script(src=base + '/javascripts/jquery-ui.min.js')
+		script(src=base + '/javascripts/jquery.multiselect.min.js')
 		script(src=base + '/javascripts/bootstrap.min.js')
 
 		// include default stylesheets and any view stylesheets
