--- a/views/report/annual.jade
+++ b/views/report/annual.jade
@@ -155,6 +155,6 @@ section(id='query-form')
 
 			$(".item").click(function () {
 				var val = $(this).text();
-				$(".panel").css("display", "none");
-				$("#panel-" + val).css("display", "block");
+				$(".panel").addClass("hidden");
+				$("#panel-" + val).removeClass("hidden");
 			});
